# my-devops-repo

./: .gitignore  .pr-bot.yml  README.md  SECURITY.md  codecov.yml  jenkinsfile-ci
.github/workflows/: ci-on-merge.yaml  ci.yaml  ci.yml  codecov-workflow.yaml  new_ci.yaml  pr-review.yaml  push-on-pr.yaml  release.yml
apps/basic-python-api/: main.py
apps/basic-video-store-api-with-db/: main.py  requirements.txt  test.py
apps/kb-api/: README.md  pyproject.toml  requirements.txt
apps/spark/: Dockerfile  README.md  deployment.yaml  ingress.yaml  namespace.yaml  storage.yaml
argocd-deploys/argo-redis/: argo-redis.yaml
argocd-deploys/argo-spark/: argo-spark.yaml
documentations/: scripts.md
images/spark-base/: Dockerfile  build.sh  docker-compose.yaml
images/spark-executor/: Dockerfile  build.sh
images/sql-database/: dockerfile
images/webserver-example/: dockerfile
infra/argocd/: README.md  argo-repo-server-patch.yaml  argocd-install.yaml  ingress.yaml  kustomization.yaml  vault-secret.yaml
infra/hashicorp-vault/: .gitignore  README.md  ingress.yaml  kustomization.yaml  unseal-vault.sh  values.yaml  vault-secret.yaml
infra/kind/: local-cluster.yaml  notes.md
infra/knowledge-base-app/: postgres-deployment.yaml  postgres-storage.yaml
scripts/: UV.md  build_and_push.py  codecov-requirements.txt  docker_hub_tags.py  kustomize_build_filters.py  pyproject.toml  python_auto_pr_approve.py  setup.cfg  test_build_and_push.py
scripts/tests/: test_build_and_push.py  test_docker_hub_tags.py  test_kustomize_build_filters.py  test_python_auto_pr_approve.py
(+44 files in other folders)
